Added a State and Control Point class. Added slot functionalities to Renderer that connect the save, load, undo and redo buttons in the ui.

--- a/PUPs/mainwindow.ui
+++ b/PUPs/mainwindow.ui
@@ -396,6 +396,11 @@
     <string>Load</string>
    </property>
   </action>
+  <action name="actionTest">
+   <property name="text">
+    <string>Test</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -407,6 +412,10 @@
    <slots>
     <signal>updateNext(int)</signal>
     <slot>updateMe(int)</slot>
+    <slot>undo()</slot>
+    <slot>redo()</slot>
+    <slot>saveSlot()</slot>
+    <slot>loadSlot()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -489,6 +498,70 @@
     <hint type="destinationlabel">
      <x>232</x>
      <y>196</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionUndo</sender>
+   <signal>triggered()</signal>
+   <receiver>glCurvePane</receiver>
+   <slot>undo()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>232</x>
+     <y>197</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionRedo</sender>
+   <signal>triggered()</signal>
+   <receiver>glCurvePane</receiver>
+   <slot>redo()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>232</x>
+     <y>197</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionLoad</sender>
+   <signal>triggered()</signal>
+   <receiver>glCurvePane</receiver>
+   <slot>loadSlot()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>232</x>
+     <y>197</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionSave</sender>
+   <signal>triggered()</signal>
+   <receiver>glCurvePane</receiver>
+   <slot>saveSlot()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>232</x>
+     <y>197</y>
     </hint>
    </hints>
   </connection>
