--- a/PUPs/mainwindow.ui
+++ b/PUPs/mainwindow.ui
@@ -349,12 +349,12 @@
      <x>0</x>
      <y>0</y>
      <width>931</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuApplication">
     <property name="title">
-     <string>Application</string>
+     <string>File</string>
     </property>
     <addaction name="actionSave"/>
     <addaction name="actionLoad"/>
