--- a/PUPs/mainwindow.ui
+++ b/PUPs/mainwindow.ui
@@ -281,8 +281,15 @@
     <addaction name="actionUndo"/>
     <addaction name="actionRedo"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionFade"/>
+   </widget>
    <addaction name="menuApplication"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionClose">
@@ -294,10 +301,16 @@
    <property name="text">
     <string>Undo</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
   </action>
   <action name="actionRedo">
    <property name="text">
     <string>Redo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Y</string>
    </property>
   </action>
   <action name="actionSave">
@@ -308,6 +321,17 @@
   <action name="actionLoad">
    <property name="text">
     <string>Load</string>
+   </property>
+  </action>
+  <action name="actionFade">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Fade</string>
    </property>
   </action>
  </widget>
@@ -325,6 +349,7 @@
     <slot>redo()</slot>
     <slot>saveSlot()</slot>
     <slot>loadSlot()</slot>
+    <slot>fadeSlot(bool)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -447,6 +472,22 @@
    <signal>triggered()</signal>
    <receiver>glCurvePane</receiver>
    <slot>redo()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>236</x>
+     <y>201</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionFade</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>glCurvePane</receiver>
+   <slot>fadeSlot(bool)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
