--- a/PUPs/mainwindow.ui
+++ b/PUPs/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Partition of Unity Parametrics (PUPs): The Educational Tool - Andrew Legault, Kent Duncan, Scott Chorel</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -390,6 +390,7 @@
     <slot>saveCollectionSlot()</slot>
     <slot>loadCollectionSlot()</slot>
     <slot>clearSlot()</slot>
+    <slot>addToCollectionSlot()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -424,38 +425,6 @@
     <hint type="destinationlabel">
      <x>232</x>
      <y>196</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>glCurvePane</sender>
-   <signal>updateNext(int)</signal>
-   <receiver>glProjectionPane</receiver>
-   <slot>updateMe(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>232</x>
-     <y>196</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>698</x>
-     <y>158</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>glProjectionPane</sender>
-   <signal>updateNext(int)</signal>
-   <receiver>glParameterPane</receiver>
-   <slot>updateMe(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>694</x>
-     <y>202</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>465</x>
-     <y>460</y>
     </hint>
    </hints>
   </connection>
@@ -600,6 +569,54 @@
     <hint type="destinationlabel">
      <x>236</x>
      <y>201</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionAdd_Selected_Basis_to_Collection</sender>
+   <signal>triggered()</signal>
+   <receiver>glCurvePane</receiver>
+   <slot>addToCollectionSlot()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>236</x>
+     <y>201</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>glProjectionPane</sender>
+   <signal>updateNext(int)</signal>
+   <receiver>glParameterPane</receiver>
+   <slot>updateMe(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>694</x>
+     <y>202</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>465</x>
+     <y>460</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>glCurvePane</sender>
+   <signal>updateNext(int)</signal>
+   <receiver>glProjectionPane</receiver>
+   <slot>updateMe(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>232</x>
+     <y>196</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>698</x>
+     <y>158</y>
     </hint>
    </hints>
   </connection>
