I hope this doesnt delete you ui file !

--- a/PUPs/mainwindow.ui
+++ b/PUPs/mainwindow.ui
@@ -296,7 +296,7 @@
      <x>0</x>
      <y>0</y>
      <width>931</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuApplication">
@@ -322,6 +322,7 @@
      <string>View</string>
     </property>
     <addaction name="actionFade"/>
+    <addaction name="actionNormalized_Basis_Functions"/>
    </widget>
    <widget class="QMenu" name="menuBasis">
     <property name="title">
@@ -403,6 +404,14 @@
     <string>Clear Screen</string>
    </property>
   </action>
+  <action name="actionNormalized_Basis_Functions">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Normalized Basis Functions</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -424,6 +433,7 @@
     <slot>loadCollectionSlot()</slot>
     <slot>clearSlot()</slot>
     <slot>addToCollectionSlot()</slot>
+    <slot>normalizedSlot(bool)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -650,6 +660,22 @@
     <hint type="destinationlabel">
      <x>465</x>
      <y>455</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionNormalized_Basis_Functions</sender>
+   <signal>triggered(bool)</signal>
+   <receiver>glParameterPane</receiver>
+   <slot>normalizedSlot(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>465</x>
+     <y>458</y>
     </hint>
    </hints>
   </connection>
